Fixed header alignment and container border issues

--- a/src/pages/app/components/header/header.css
+++ b/src/pages/app/components/header/header.css
@@ -14,6 +14,11 @@
     box-shadow: 0 0 2px 0 #696969;
 }
 
+#header-brand-name{
+    position: absolute;
+    left: 70px;
+}
+
 .user-info{
       width: 55px;
       height: 40px;
